8317507: C2 compilation fails with "Exceeded _node_regs array"

Backport-of: a5818972c16bd883d768ff2fb23a8aa9e0142c65